Attempt to fix previous commit to work on versions of Java below 11